# PaperCraft

./: CMakeLists.txt  CMakePresets.json  README.md
PaperCraft/: CMakeLists.txt  PaperCraft.cpp  PaperCraft.h
PaperCraft/old shaders/: fragment.glsl  vertex.glsl
PaperCraft/src/: ImguiLayer.h  ImguiModule.cpp  ImguiModule.h  ModelLoader.cpp  ModelLoader.h  VulkanBackend.cpp  VulkanBackend.h  VulkanRenderer.cpp  VulkanRenderer.h  inputhandler.cpp  inputhandler.h  main.cpp  vk_initializers.cpp  vk_initializers.h
PaperCraft/src/shaders/: compile.bat  fill.frag  fill_shader.vert  fill_vert.spv  frag.spv  frag_fill.spv  frag_line.spv  line.frag  line_geom.spv  line_shader.geom  line_shader.vert  line_vert.spv  shader.frag  shader.vert  vert.spv
